logs/pyimagingmspec.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyImagingMSpec'...
Listing './lib/python3.5/site-packages/pyImagingMSpec/convert'...
Compiling './lib/python3.5/site-packages/pyImagingMSpec/convert/bruker_sqlite.py'...
***   File "./lib/python3.5/site-packages/pyImagingMSpec/convert/bruker_sqlite.py", line 55
    print "{}% complete".format(float(i) / count * 100.0)
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyImagingMSpec/convert/h5.py'...
***   File "./lib/python3.5/site-packages/pyImagingMSpec/convert/h5.py", line 33
    print 'dim: {} x {}'.format(nrow,ncol)
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyImagingMSpec/convert/hdf5.py'...
***   File "./lib/python3.5/site-packages/pyImagingMSpec/convert/hdf5.py", line 20
    print 'dim: {} x {}'.format(nrow,ncol)
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyImagingMSpec/convert/imzml.py'...
***   File "./lib/python3.5/site-packages/pyImagingMSpec/convert/imzml.py", line 31
    print 'estimated pixel size: {} x {}'.format(step[0], step[1])
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyImagingMSpec/convert/sl.py'...
***   File "./lib/python3.5/site-packages/pyImagingMSpec/convert/sl.py", line 29
    print 'sl file version: {}'.format(self.file_version)
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyImagingMSpec/inMemoryIMS.py'...
***   File "./lib/python3.5/site-packages/pyImagingMSpec/inMemoryIMS.py", line 83
    print 'loaded spectra'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyImagingMSpec/ion_datacube.py'...
***   File "./lib/python3.5/site-packages/pyImagingMSpec/ion_datacube.py", line 74
    print 'transform type not recognised'
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyImagingMSpec/test'...
Listing './lib/python3.5/site-packages/pyImagingMSpec-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
